--- a/about/index.qmd
+++ b/about/index.qmd
@@ -3,3 +3,27 @@ title: "index"
 format: html
 ---
 
+This is a brand colors example:
+
+```{r}
+library(tidyverse)
+library(brand.yml)
+library(quarto)
+
+brand <- read_brand_yml("C:/Users/user/Documents/GitHub/WebTrial2/_brand.yml")
+brand_theme <- theme_brand_ggplot2("C:/Users/user/Documents/GitHub/WebTrial2/_brand.yml")
+
+ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  scale_color_manual(
+    values = c(
+      brand$color$palette$red,
+      brand$color$palette$yellow,
+      brand$color$palette$blue
+    )
+  ) +
+  labs(title = "A plot with brand colors") +
+  brand_theme
+
+```
